# TIC-MIDI

./: .gitignore  README.md  requirements.txt  setup.cfg  tic_midi.py
example/: test_out.tic  visualization.tic
