[metadata]
name = TIC-MIDI
version = 0.1.3

[options]
python_requires = >=3.9
packages = find:
install_requires =
    mido>=1.2.0,<=1.3.2

[options.extras_require]
dev =
    pylsp-mypy
    pylsp-rope
    python-lsp-isort
    python-lsp-server[all]

[pydocstyle]
ignore = D101,D102,D103,D107,D203,D212

[mypy]
allow_redefinition = True
